from flask_sqlalchemy import SQLAlchemy
from flask_login import UserMixin
from datetime import datetime
from werkzeug.security import generate_password_hash, check_password_hash

db = SQLAlchemy()


class Store(UserMixin, db.Model):
    """店舗テーブル"""
    __tablename__ = 'stores'

    id = db.Column(db.Integer, primary_key=True)
    login_id = db.Column(db.String(50), unique=True, nullable=False, index=True)
    password_hash = db.Column(db.String(255), nullable=False)
    store_name = db.Column(db.String(100), nullable=False)
    created_at = db.Column(db.DateTime, default=datetime.utcnow)

    # リレーション
    cost_setting = db.relationship('CostSetting', backref='store', uselist=False, cascade='all, delete-orphan')
    ingredients = db.relationship('Ingredient', backref='store', lazy=True, cascade='all, delete-orphan')
    recipes = db.relationship('Recipe', backref='store', lazy=True, cascade='all, delete-orphan')
    custom_cost_items = db.relationship('CustomCostItem', backref='store', lazy=True, cascade='all, delete-orphan')

    def set_password(self, password):
        """パスワードをハッシュ化して保存"""
        self.password_hash = generate_password_hash(password)

    def check_password(self, password):
        """パスワードの検証"""
        return check_password_hash(self.password_hash, password)

    def __repr__(self):
        return f'<Store {self.store_name}>'


class CostSetting(db.Model):
    """原価計算設定テーブル"""
    __tablename__ = 'cost_settings'

    id = db.Column(db.Integer, primary_key=True)
    store_id = db.Column(db.Integer, db.ForeignKey('stores.id'), nullable=False, unique=True)
    profit_margin = db.Column(db.Numeric(5, 2), default=30.0)  # 利益率(%)
    created_at = db.Column(db.DateTime, default=datetime.utcnow)
    updated_at = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)

    def __repr__(self):
        return f'<CostSetting store_id={self.store_id}>'


class Ingredient(db.Model):
    """材料マスタテーブル"""
    __tablename__ = 'ingredients'

    id = db.Column(db.Integer, primary_key=True)
    store_id = db.Column(db.Integer, db.ForeignKey('stores.id'), nullable=False)
    name = db.Column(db.String(100), nullable=False)

    # 購入情報
    purchase_price = db.Column(db.Numeric(10, 2))  # 購入価格
    purchase_quantity = db.Column(db.Numeric(10, 3), default=1)  # 購入数量
    purchase_unit = db.Column(db.String(20))  # 購入単位(kg, L, 個など)

    # 使用情報
    usage_unit = db.Column(db.String(20))  # 使用単位(g, ml, 個など)

    # 後方互換性のための計算フィールド（非推奨）
    unit_price = db.Column(db.Numeric(10, 2))  # 旧単価フィールド
    unit = db.Column(db.String(20))  # 旧単位フィールド

    supplier = db.Column(db.String(100))  # 仕入先(オプション)
    is_allergen = db.Column(db.Boolean, default=False)  # アレルゲンフラグ
    allergen_type = db.Column(db.String(50))  # アレルゲン種類(小麦、卵、乳など)
    created_at = db.Column(db.DateTime, default=datetime.utcnow)
    updated_at = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)

    # リレーション
    recipe_ingredients = db.relationship('RecipeIngredient', backref='ingredient', lazy=True, cascade='all, delete-orphan')

    def get_usage_unit_price(self):
        """使用単位あたりの単価を計算"""
        # 新しいフィールドが存在する場合
        if self.purchase_price is not None and self.purchase_quantity and self.purchase_unit and self.usage_unit:
            if self.purchase_quantity == 0:
                return 0

            # 購入単位を使用単位に換算
            conversion_factor = self._get_conversion_factor(self.purchase_unit, self.usage_unit)

            # 購入単位あたりの価格
            price_per_purchase_unit = float(self.purchase_price) / float(self.purchase_quantity)

            # 使用単位あたりの価格
            usage_unit_price = price_per_purchase_unit / conversion_factor

            return usage_unit_price

        # 後方互換性: 旧フィールドを使用
        elif self.unit_price is not None:
            return float(self.unit_price)

        return 0

    @staticmethod
    def _get_conversion_factor(from_unit, to_unit):
        """
        単位変換係数を取得
        例: kg -> g なら 1000, L -> ml なら 1000
        """
        # 単位を小文字に統一
        from_unit = from_unit.lower()
        to_unit = to_unit.lower()

        # 同じ単位の場合
        if from_unit == to_unit:
            return 1.0

        # 重量変換
        weight_conversions = {
            ('kg', 'g'): 1000,
            ('g', 'kg'): 0.001,
            ('kg', 'kg'): 1,
            ('g', 'g'): 1,
        }

        # 容量変換
        volume_conversions = {
            ('l', 'ml'): 1000,
            ('ml', 'l'): 0.001,
            ('l', 'l'): 1,
            ('ml', 'ml'): 1,
        }

        # 個数（変換なし）
        count_units = {'個', '枚', '本', 'ヶ', 'コ'}
        if from_unit in count_units and to_unit in count_units:
            return 1.0

        # 変換テーブルから検索
        conversion_key = (from_unit, to_unit)

        if conversion_key in weight_conversions:
            return weight_conversions[conversion_key]

        if conversion_key in volume_conversions:
            return volume_conversions[conversion_key]

        # 変換できない場合は1.0を返す（同じ単位として扱う）
        return 1.0

    def __repr__(self):
        return f'<Ingredient {self.name}>'


class Recipe(db.Model):
    """レシピテーブル"""
    __tablename__ = 'recipes'

    id = db.Column(db.Integer, primary_key=True)
    store_id = db.Column(db.Integer, db.ForeignKey('stores.id'), nullable=False)
    product_name = db.Column(db.String(100), nullable=False)
    category = db.Column(db.String(50))  # 商品カテゴリー
    production_quantity = db.Column(db.Integer, nullable=False, default=1)  # 製造個数
    production_time = db.Column(db.Integer, default=0)  # 製造時間(分)
    shelf_life_days = db.Column(db.Integer)  # 賞味期限(日数)
    custom_profit_margin = db.Column(db.Numeric(5, 2))  # 商品ごとの利益率(%)、Noneの場合は基本設定を使用
    selling_price = db.Column(db.Numeric(10, 2))  # 手動設定の販売価格、Noneの場合は推奨価格を使用
    created_at = db.Column(db.DateTime, default=datetime.utcnow)
    updated_at = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)

    # リレーション
    recipe_ingredients = db.relationship('RecipeIngredient', backref='recipe', lazy=True, cascade='all, delete-orphan')

    def calculate_material_cost(self):
        """材料費の計算"""
        total_cost = 0
        for ri in self.recipe_ingredients:
            # RecipeIngredientのcalculate_costメソッドを使用
            total_cost += ri.calculate_cost()
        return float(total_cost)

    def calculate_total_cost(self, cost_setting=None):
        """総原価の計算(固定費含む)"""
        material_cost = self.calculate_material_cost()

        if not cost_setting:
            return material_cost

        total_cost = material_cost

        # カスタム原価項目の追加（人件費・光熱費を含むすべての原価項目）
        custom_items = CustomCostItem.query.filter_by(
            store_id=self.store_id,
            is_active=True
        ).all()

        for item in custom_items:
            total_cost += item.calculate_cost(self)

        return total_cost

    def calculate_unit_cost(self, cost_setting=None):
        """1個あたりの原価"""
        total_cost = self.calculate_total_cost(cost_setting)
        return total_cost / self.production_quantity if self.production_quantity > 0 else 0

    def calculate_suggested_price(self, cost_setting):
        """販売推奨価格の計算"""
        unit_cost = self.calculate_unit_cost(cost_setting)

        # 商品ごとの利益率があればそれを使用、なければ基本設定を使用
        profit_margin = self.custom_profit_margin if self.custom_profit_margin is not None else (cost_setting.profit_margin if cost_setting else 0)

        if profit_margin > 0:
            margin_multiplier = 1 + (float(profit_margin) / 100)
            return unit_cost * margin_multiplier
        return unit_cost

    def get_profit_margin(self, cost_setting):
        """使用している利益率を取得"""
        return self.custom_profit_margin if self.custom_profit_margin is not None else (cost_setting.profit_margin if cost_setting else 0)

    def get_selling_price(self, cost_setting):
        """販売価格を取得（手動設定があればそれを、なければ推奨価格を返す）"""
        if self.selling_price is not None:
            return float(self.selling_price)
        return self.calculate_suggested_price(cost_setting)

    def get_allergens(self):
        """アレルゲン情報の取得"""
        allergens = []
        for ri in self.recipe_ingredients:
            if ri.ingredient.is_allergen and ri.ingredient.allergen_type:
                if ri.ingredient.allergen_type not in allergens:
                    allergens.append(ri.ingredient.allergen_type)
        return allergens


    def __repr__(self):
        return f'<Recipe {self.product_name}>'


class RecipeIngredient(db.Model):
    """レシピ材料中間テーブル"""
    __tablename__ = 'recipe_ingredients'

    id = db.Column(db.Integer, primary_key=True)
    recipe_id = db.Column(db.Integer, db.ForeignKey('recipes.id'), nullable=False)
    ingredient_id = db.Column(db.Integer, db.ForeignKey('ingredients.id'), nullable=False)
    quantity = db.Column(db.Numeric(10, 3), nullable=False)  # 使用量（使用単位での数量）

    def calculate_cost(self):
        """この材料の使用コストを計算"""
        usage_unit_price = self.ingredient.get_usage_unit_price()
        return float(self.quantity) * usage_unit_price

    def __repr__(self):
        return f'<RecipeIngredient recipe_id={self.recipe_id} ingredient_id={self.ingredient_id}>'


class CustomCostItem(db.Model):
    """カスタム原価項目テーブル"""
    __tablename__ = 'custom_cost_items'

    id = db.Column(db.Integer, primary_key=True)
    store_id = db.Column(db.Integer, db.ForeignKey('stores.id'), nullable=False)
    name = db.Column(db.String(100), nullable=False)  # 項目名（例: 包装費、減価償却費など）
    calculation_type = db.Column(db.String(20), nullable=False)  # 計算方法: 'fixed', 'per_unit', 'per_time'
    amount = db.Column(db.Numeric(10, 2), nullable=False, default=0.0)  # 金額
    is_active = db.Column(db.Boolean, default=True)  # 有効/無効
    description = db.Column(db.String(255))  # 説明
    display_order = db.Column(db.Integer, default=0)  # 表示順序
    created_at = db.Column(db.DateTime, default=datetime.utcnow)
    updated_at = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)

    def calculate_cost(self, recipe):
        """
        原価を計算

        Args:
            recipe: Recipeオブジェクト

        Returns:
            float: 計算された原価
        """
        if not self.is_active:
            return 0.0

        if self.calculation_type == 'fixed':
            # 固定費: レシピ全体に対して固定金額
            return float(self.amount)

        elif self.calculation_type == 'per_unit':
            # 個数あたり: 製造個数 × 単価
            return float(self.amount) * recipe.production_quantity

        elif self.calculation_type == 'per_time':
            # 時間あたり: 製造時間(分) × 分単価
            if recipe.production_time > 0:
                return float(self.amount) * recipe.production_time
            return 0.0

        return 0.0

    def __repr__(self):
        return f'<CustomCostItem {self.name}>'
